# QtBitmapEditor

./: CMakeLists.txt  LICENSE  README.md  about.cpp  about.h  about.ui  app_context.h  exportproject.cpp  exportproject.h  exportproject.ui  icons.qrc  importimage.cpp  importimage.h  importimage.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newproject.cpp  newproject.h  newproject.ui  openproject.cpp  openproject.h  openproject.ui  projectfromimage.cpp  projectfromimage.h  projectfromimage.ui  projectwizard.cpp  projectwizard.h  projectwizard.ui  splash.qrc  theme.qrc
.github/workflows/: cmake.yml
base/: app_context.cpp  app_context.h  config.h  dialogs.h  layer.cpp  layer.h  layermanager.cpp  layermanager.h  module.h  project.cpp  project.h  tool.cpp  tool.h  toolcontroller.cpp  toolcontroller.h  workspace.cpp  workspace.h
component/: layermanager.cpp  layermanager.h  toolcontroller.cpp  workspace.cpp  workspace.h
layer/: bitmaplayer.cpp  bitmaplayer.h  imagelayer.cpp  imagelayer.h  textlayer.cpp  textlayer.h
objects/: bitmaplayer.cpp  bitmaplayer.h  layer.cpp  layer.h  project.cpp  project.h
src/theme/: Combinear.qss
tool/: brush.cpp  brush.h  eraser.cpp  eraser.h  eyedropper.cpp  eyedropper.h  fillcolor.cpp  fillcolor.h  pen.cpp  pen.h  pencil.cpp  pencil.h  text.cpp  text.h
utility/: coloritem.cpp  coloritem.h  colorpicker.cpp  colorpicker.h  fontselector.cpp  fontselector.h  gradientwidget.cpp  gradientwidget.h  mouseeventhelper.cpp  mouseeventhelper.h
